reprojected into new epsg  for cost distance in meters

--- a/scripts/LPtest.ipynb
+++ b/scripts/LPtest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 233,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "############################################################\n",
+    "# FUNCTIONS IN THIS SCRIPT\n",
+    "\n",
+    "# define function to convert into proj in meters\n",
+    "def epsg_meters(gdf, proj=26911):\n",
+    "    g = gdf.copy()\n",
+    "    g = g.to_crs(epsg=proj)\n",
+    "    return g\n",
+    "\n",
+    "# define function to get dictionary names for LP\n",
+    "def get_dict_names(dict):\n",
+    "    names = []\n",
+    "    for key, value in dict.items():\n",
+    "    #     print(key)\n",
+    "        names.append(key)\n",
+    "    return names\n",
+    "\n",
+    "# function to make array of coordinates to calculate matrices\n",
+    "def geo_to_coords(df):\n",
+    "    df['coord'] = \"\"\n",
+    "    for index, row in df.iterrows():\n",
+    "    #      print('index', index)\n",
+    "    #      print('row', row)\n",
+    "         for pt in list(row['geometry'].coords): \n",
+    "    #         print(pt)\n",
+    "            df.at[index,'coord'] = np.asarray(pt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
     "# mini gdfs of county wastes (tbm - location and MSW for 2014) \n",
-    "c = gpd.read_file(\"data/clean/techbiomass_pts.shp\")\n",
+    "c_proj = gpd.read_file(\"data/clean/techbiomass_pts.shp\")\n",
+    "\n",
+    "#CONVERT TO METERS!!\n",
+    "c = epsg_meters(c_proj)\n",
+    "\n",
     "#c = c[(c['biomass.ca'] == \"organic fraction municipal solid waste\") & (c['year'] == 2014)].copy()\n",
     "c = c[(c['biomass.fe'] == \"FOOD\") & (c['year'] == 2014)].copy()\n",
     "\n",
@@ -39,12 +79,13 @@
     "# subset out four counties\n",
     "csub = c[(c['COUNTY'] == \"Los Angeles\") | (c['COUNTY'] == \"San Diego\")| \n",
     "         (c['COUNTY'] == \"Orange\")| (c['COUNTY'] == \"Imperial\")].copy()\n",
-    "# csub = c[(c['COUNTY'] == \"San Diego\")| (c['COUNTY'] == \"Imperial\")].copy()\n"
+    "# csub = c[(c['COUNTY'] == \"San Diego\")| (c['COUNTY'] == \"Imperial\")].copy()\n",
+    "# csub.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +97,7 @@
        " 'San Diego': 113139.59859294}"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,13 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Mini gdfs of facilites (location and capacity)\n",
-    "f = gpd.read_file(\"data/clean/clean_swis.shp\")\n",
+    "f_proj = gpd.read_file(\"data/clean/clean_swis.shp\")\n",
     "# f.head(8)\n",
+    "\n",
+    "f = epsg_meters(f_proj)\n",
+    "\n",
     "f = f[['SwisNo', 'AcceptedWa', 'County', 'cap_m3', 'geometry']].copy()\n",
     "\n",
     "# subset out four counties\n",
@@ -86,19 +130,12 @@
     "fdict = dict(zip(fsub['SwisNo'], fsub['cap_m3'])) #alt is use SwisNo\n",
     "\n",
     "\n",
-    "def get_dict_names(dict):\n",
-    "    names = []\n",
-    "    for key, value in dict.items():\n",
-    "    #     print(key)\n",
-    "        names.append(key)\n",
-    "    return names\n",
-    "\n",
     "facnames = get_dict_names(fdict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -107,33 +144,10 @@
      "text": [
       "type C:  <class 'list'>\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[array([1.00692983, 0.30141897, 1.89468187, 3.37572445, 0.26869847]),\n",
-       " array([0.14909844, 0.71687781, 0.95243269, 2.512408  , 0.90761707]),\n",
-       " array([2.30858632, 3.01463854, 1.6204382 , 0.23448852, 3.16363448]),\n",
-       " array([0.82941893, 1.57425123, 0.09146703, 1.81763161, 1.75937171])]"
-      ]
-     },
-     "execution_count": 166,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# CREATE DISTANCE MATRIX #################################\n",
-    "\n",
-    "# function to make array of coordinates from above:\n",
-    "def geo_to_coords(df):\n",
-    "    df['coord'] = \"\"\n",
-    "    for index, row in df.iterrows():\n",
-    "    #      print('index', index)\n",
-    "    #      print('row', row)\n",
-    "         for pt in list(row['geometry'].coords): \n",
-    "    #         print(pt)\n",
-    "            df.at[index,'coord'] = np.asarray(pt)\n",
     "\n",
     "# RUN ON subset gdfs\n",
     "geo_to_coords(csub)\n",
@@ -148,35 +162,26 @@
     "# test1 = pd.DataFrame(distance_matrix(C, F), index = csub.COUNTY, columns = fsub.SwisNo)\n",
     "cost_distance = list(distance_matrix(C,F))\n",
     "\n",
-    "cost_distance"
+    "# cost_distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 250,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[array([-117.7249 ,   33.60377]), array([-118.27222,   34.11722]), array([-117.1805,   32.8622]), array([-115.40676,   32.97484]), array([-118.34794,   34.29626])]\n",
-      "distance between cty 1(LA) and fac 3(37AB:  1.894681870072898\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# test distances to make sure they're in the right place?? - also STILL IN DEGREES!\n",
-    "import math\n",
-    "C1 = [-118.57205925,   34.14803912]\n",
-    "F3 = [-117.1805,   32.8622]\n",
-    "distance = math.sqrt( ((C1[0]-F3[0])**2)+((C1[1]-F3[1])**2) )\n",
-    "print(\"distance between cty 1(LA) and fac 3(37AB: \", distance)"
+    "# CHECK distances to make sure they're in the right place?? - this test STILL IN DEGREES!\n",
+    "# import math\n",
+    "# C1 = [-118.57205925,   34.14803912]\n",
+    "# F3 = [-117.1805,   32.8622]\n",
+    "# distance = math.sqrt( ((C1[0]-F3[0])**2)+((C1[1]-F3[1])**2) )\n",
+    "# print(\"distance between cty 1(LA) and fac 3(37AB): \", distance)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +209,7 @@
       "Route_San_Diego_19_AR_5584 = 0.0\n",
       "Route_San_Diego_30_AB_0378 = 0.0\n",
       "Route_San_Diego_37_AB_0011 = 0.0\n",
-      "Total Cost of Transportation =  548172.7914332158\n"
+      "Total Cost of Transportation =  52286531073.82747\n"
      ]
     }
    ],
@@ -273,12 +278,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52286531.07382747\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(value(prob.objective)/1000)"
+   ]
   },
   {
    "cell_type": "code",
