--- a/scripts/plot_and_buffers.ipynb
+++ b/scripts/plot_and_buffers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -25,11 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'init': 'epsg:4269'}\n"
+     ]
+    }
+   ],
    "source": [
     "#change wd\n",
     "os.chdir(\"/Users/anayahall/projects/grapevine\")\n",
@@ -37,14 +43,16 @@
     "gdf =  gpd.read_file(\"data/clean/clean_swis.shp\")\n",
     "# load census tract shapefile\n",
     "CA = gpd.read_file(\"data/raw/tl_2018_06_tract/tl_2018_06_tract.shp\")\n",
-    "# print(CA.crs)\n",
-    "# CA.plot()"
+    "print(CA.crs)\n",
+    "# CA.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# try plotting by size of facility\n",
