fix dictnames function use in LP solver

--- a/scripts/LPtest.ipynb
+++ b/scripts/LPtest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 269,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,37 +80,25 @@
     "csub = c[(c['COUNTY'] == \"Los Angeles\") | (c['COUNTY'] == \"San Diego\")| \n",
     "         (c['COUNTY'] == \"Orange\")| (c['COUNTY'] == \"Imperial\")].copy()\n",
     "# csub = c[(c['COUNTY'] == \"San Diego\")| (c['COUNTY'] == \"Imperial\")].copy()\n",
-    "# csub.head()"
+    "# csub.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 271,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Imperial': 6751.16711032454,\n",
-       " 'Los Angeles': 307295.084575734,\n",
-       " 'Orange': 104525.755860299,\n",
-       " 'San Diego': 113139.59859294}"
-      ]
-     },
-     "execution_count": 247,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "####MAKE DICTIONARY HERE\n",
     "cdict = dict(zip(csub['COUNTY'], csub['disposal.y']))\n",
-    "cdict"
+    "\n",
+    "# grab dict names for LP solver\n",
+    "conames = get_dict_names(cdict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,15 +115,16 @@
     "          (f['County'] == \"Orange\")| (f['County'] == \"Imperial\")].copy()\n",
     "# too many, just select first 5\n",
     "fsub = fsub[0:5].copy()\n",
-    "fdict = dict(zip(fsub['SwisNo'], fsub['cap_m3'])) #alt is use SwisNo\n",
     "\n",
-    "\n",
+    "# make into dictionary for use in LP solver\n",
+    "fdict = dict(zip(fsub['SwisNo'], fsub['cap_m3'])) \n",
+    "# grab dict names for LP solver\n",
     "facnames = get_dict_names(fdict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +148,7 @@
     "\n",
     "print(\"type C: \", type(C))\n",
     "\n",
-    "# test1 = pd.DataFrame(distance_matrix(C, F), index = csub.COUNTY, columns = fsub.SwisNo)\n",
+    "test1 = pd.DataFrame(distance_matrix(C, F), index = csub.COUNTY, columns = fsub.SwisNo)\n",
     "cost_distance = list(distance_matrix(C,F))\n",
     "\n",
     "# cost_distance"
@@ -167,21 +156,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 274,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Los Angeles', 'Orange', 'Imperial', 'San Diego']"
+      ]
+     },
+     "execution_count": 274,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# CHECK distances to make sure they're in the right place?? - this test STILL IN DEGREES!\n",
     "# import math\n",
     "# C1 = [-118.57205925,   34.14803912]\n",
     "# F3 = [-117.1805,   32.8622]\n",
     "# distance = math.sqrt( ((C1[0]-F3[0])**2)+((C1[1]-F3[1])**2) )\n",
-    "# print(\"distance between cty 1(LA) and fac 3(37AB): \", distance)\n"
+    "# print(\"distance between cty 1(LA) and fac 3(37AB): \", distance)\n",
+    "conames"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -189,27 +190,27 @@
      "output_type": "stream",
      "text": [
       "Status: Optimal\n",
-      "Route_Imperial_13_AA_0095 = 6751.0\n",
+      "Route_Imperial_13_AA_0095 = 0.0\n",
       "Route_Imperial_19_AA_1060 = 0.0\n",
-      "Route_Imperial_19_AR_5584 = 0.0\n",
+      "Route_Imperial_19_AR_5584 = 6751.0\n",
       "Route_Imperial_30_AB_0378 = 0.0\n",
       "Route_Imperial_37_AB_0011 = 0.0\n",
-      "Route_Los_Angeles_13_AA_0095 = 48052.0\n",
+      "Route_Los_Angeles_13_AA_0095 = 54803.0\n",
       "Route_Los_Angeles_19_AA_1060 = 0.0\n",
       "Route_Los_Angeles_19_AR_5584 = 0.0\n",
-      "Route_Los_Angeles_30_AB_0378 = 0.0\n",
-      "Route_Los_Angeles_37_AB_0011 = 0.0\n",
+      "Route_Los_Angeles_30_AB_0378 = 7645.0\n",
+      "Route_Los_Angeles_37_AB_0011 = 7645.0\n",
       "Route_Orange_13_AA_0095 = 0.0\n",
-      "Route_Orange_19_AA_1060 = 9174.0\n",
-      "Route_Orange_19_AR_5584 = 33823.0\n",
-      "Route_Orange_30_AB_0378 = 7645.0\n",
-      "Route_Orange_37_AB_0011 = 7645.0\n",
+      "Route_Orange_19_AA_1060 = 0.0\n",
+      "Route_Orange_19_AR_5584 = 0.0\n",
+      "Route_Orange_30_AB_0378 = 0.0\n",
+      "Route_Orange_37_AB_0011 = 0.0\n",
       "Route_San_Diego_13_AA_0095 = 0.0\n",
-      "Route_San_Diego_19_AA_1060 = 0.0\n",
-      "Route_San_Diego_19_AR_5584 = 0.0\n",
+      "Route_San_Diego_19_AA_1060 = 9174.0\n",
+      "Route_San_Diego_19_AR_5584 = 27072.0\n",
       "Route_San_Diego_30_AB_0378 = 0.0\n",
       "Route_San_Diego_37_AB_0011 = 0.0\n",
-      "Total Cost of Transportation =  52286531073.82747\n"
+      "Total Cost of Transportation =  50185404022.607956\n"
      ]
     }
    ],
@@ -219,7 +220,7 @@
     "from pulp import *\n",
     "\n",
     "# Creates a list of all the supply nodes\n",
-    "Counties  = [\"Imperial\", \"Los Angeles\", \"Orange\", \"San Diego\"]\n",
+    "Counties  = conames\n",
     "\n",
     "# Creates a dictionary for the number of units of supply for each supply node\n",
     "waste = cdict\n",
@@ -278,27 +279,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "52286531.07382747\n"
+      "50185404.02260795\n"
      ]
     }
    ],
    "source": [
-    "# print(value(prob.objective)/1000)"
+    "print(value(prob.objective)/1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 278,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SwisNo</th>\n",
+       "      <th>AcceptedWa</th>\n",
+       "      <th>County</th>\n",
+       "      <th>cap_m3</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>coord</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30-AB-0378</td>\n",
+       "      <td>Green Materials</td>\n",
+       "      <td>Orange</td>\n",
+       "      <td>7645.5500</td>\n",
+       "      <td>POINT (432747.1406806501 3718459.660051197)</td>\n",
+       "      <td>[432747.14068065013, 3718459.6600511973]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19-AR-5584</td>\n",
+       "      <td>Green Materials</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>33823.9132</td>\n",
+       "      <td>POINT (382671.2614913691 3775883.912012273)</td>\n",
+       "      <td>[382671.2614913691, 3775883.9120122734]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>37-AB-0011</td>\n",
+       "      <td>Green Materials</td>\n",
+       "      <td>San Diego</td>\n",
+       "      <td>7645.5500</td>\n",
+       "      <td>POINT (483112.2680784503 3636025.025664771)</td>\n",
+       "      <td>[483112.26807845035, 3636025.0256647714]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>13-AA-0095</td>\n",
+       "      <td>Agricultural,Manure</td>\n",
+       "      <td>Imperial</td>\n",
+       "      <td>54803.3024</td>\n",
+       "      <td>POINT (648883.9532824729 3649624.542233068)</td>\n",
+       "      <td>[648883.9532824729, 3649624.5422330676]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>19-AA-1060</td>\n",
+       "      <td>Green Materials</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>9174.6600</td>\n",
+       "      <td>POINT (375950.2595991582 3795827.799395056)</td>\n",
+       "      <td>[375950.2595991582, 3795827.7993950555]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        SwisNo           AcceptedWa       County      cap_m3  \\\n",
+       "2   30-AB-0378      Green Materials       Orange   7645.5500   \n",
+       "3   19-AR-5584      Green Materials  Los Angeles  33823.9132   \n",
+       "6   37-AB-0011      Green Materials    San Diego   7645.5500   \n",
+       "10  13-AA-0095  Agricultural,Manure     Imperial  54803.3024   \n",
+       "11  19-AA-1060      Green Materials  Los Angeles   9174.6600   \n",
+       "\n",
+       "                                       geometry  \\\n",
+       "2   POINT (432747.1406806501 3718459.660051197)   \n",
+       "3   POINT (382671.2614913691 3775883.912012273)   \n",
+       "6   POINT (483112.2680784503 3636025.025664771)   \n",
+       "10  POINT (648883.9532824729 3649624.542233068)   \n",
+       "11  POINT (375950.2595991582 3795827.799395056)   \n",
+       "\n",
+       "                                       coord  \n",
+       "2   [432747.14068065013, 3718459.6600511973]  \n",
+       "3    [382671.2614913691, 3775883.9120122734]  \n",
+       "6   [483112.26807845035, 3636025.0256647714]  \n",
+       "10   [648883.9532824729, 3649624.5422330676]  \n",
+       "11   [375950.2595991582, 3795827.7993950555]  "
+      ]
+     },
+     "execution_count": 278,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fsub.head()\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -311,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
